--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,13 @@
 &nbsp;
         </header>
     </div>
-
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
+
       <section id="main_content" class="inner">
+            <img alt="COMBINE" src="images/COMBINE_website-banner.png"/>
+            <p align="centre"><a href="README.md"><strong>Home</strong></a>&nbsp;&nbsp;&nbsp;<a href="COMBINE2020.md"><strong>COMBINE 2020</strong></a>&nbsp;&nbsp;&nbsp;<a href="About.md"><strong>About</strong></a></p>
+            
         {{ content }}
       </section>
     </div>
@@ -30,7 +33,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        <p>COmputational Modeling in BIology NEtwork </p>
       </footer>
     </div>
 
