--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 
       <section id="main_content" class="inner">
             <img alt="COMBINE" src="images/COMBINE_website-banner.png"/>
-            <p align="centre"><a href="README.md"><strong>Home</strong></a>&nbsp;&nbsp;&nbsp;<a href="COMBINE2020.md"><strong>COMBINE 2020</strong></a>&nbsp;&nbsp;&nbsp;<a href="About.md"><strong>About</strong></a></p>
+            <p align="centre"><a href="/"><strong>Home</strong></a>&nbsp;&nbsp;&nbsp;<a href="COMBINE2020.html"><strong>COMBINE 2020</strong></a>&nbsp;&nbsp;&nbsp;<a href="About.html"><strong>About</strong></a></p>
             
         {{ content }}
       </section>
