--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
       <section id="main_content" class="inner">
             <img alt="COMBINE" src="https://combine-org.github.io/Website/images/COMBINE_website-banner.png"/>
-            <p align="centre"><a href="/Website"><strong>Home</strong></a>&nbsp;&nbsp;&nbsp;<a href="https://combine-org.github.io/Website/COMBINE2020.html"><strong>COMBINE 2020</strong></a>&nbsp;&nbsp;&nbsp;<a href="https://combine-org.github.io/Website/About.html"><strong>About</strong></a></p>
+            <p align="centre"><a href="http://co.mbine.org/"><strong>COMBINE Home</strong></a> <!--&nbsp;&nbsp;&nbsp;<a href="https://combine-org.github.io/Website/COMBINE2020.html"><strong>COMBINE 2020</strong></a>&nbsp;&nbsp;&nbsp;<a href="https://combine-org.github.io/Website/About.html"><strong>About</strong></a>--></p>
             
         {{ content }}
       </section>
